[package]
name = "resume-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.27", features = ["serde"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.1", features = [
    "runtime-async-std",
    "tls-native-tls",
    "postgres",
    "chrono",
] }
